# arulselvanmadhavan.github.io

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  docker-compose.yml  dune-project
.github/workflows/: deploy.yml
ALD/: aldutils.js  chamber_controls.js  chem.js  constants.js  cycles_controls.js  flow_rate_controls.js  index.html  main.js  particle_counter.js  results_controls.js  temperature_controls.js
ALD/models/dose/: ZeroD.js  base.js
docker/: entrypoint.sh  serve.sh
lib/: content.ml  cv.ml  dune  portfolio_lib.ml  render.ml
scripts/: docker-compose.sh
source/: cv-pdf.tex  resume.org
static/: cv.css  style.css
